@@ -42,9 +42,8 @@
 	</issueManagement>
 
 	<properties>
+		<java.version>25</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>23</maven.compiler.source>
-		<maven.compiler.target>23</maven.compiler.target>
         <argLine/>
         <!-- Spring Boot 3.5.0 overrides -->
         <junit-jupiter.version>6.0.0</junit-jupiter.version>
@@ -111,10 +110,11 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.14.0</version>
+<!--
 				<configuration>
-					<release>23</release>
-					<compilerArgs>--enable-preview</compilerArgs>
+					<compilerArgs>&#45;&#45;enable-preview</compilerArgs>
 				</configuration>
+-->
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -151,7 +151,7 @@
 									<version>3.6.3</version>
 								</requireMavenVersion>
 								<requireJavaVersion>
-									<version>23</version>
+									<version>25</version>
 								</requireJavaVersion>
 							</rules>
 						</configuration>
